--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,16 +14,15 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
+    font-family: $base-font-family;
+    font-size: $base-font-size;
+    line-height: $base-line-height;
+    font-weight: 300;
     color: $text-color;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
-    -webkit-font-feature-settings: "kern" 1;
-    -moz-font-feature-settings: "kern" 1;
-    -o-font-feature-settings: "kern" 1;
-    font-feature-settings: "kern" 1;
-    font-kerning: normal;
 }
+
 
 
 
@@ -82,7 +81,7 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-    font-weight: $base-font-weight;
+    font-weight: 200;
 }
 
 
@@ -94,9 +93,9 @@ a {
     color: $brand-color;
     text-decoration: none;
 
-    &:visited {
-        color: darken($brand-color, 15%);
-    }
+   &:visited {
+    /*    color: darken($brand-color, 15%); */
+    } 
 
     &:hover {
         color: $text-color;
@@ -104,7 +103,9 @@ a {
     }
 }
 
-
+/* .post-content a, .home a {
+	font-weight: 500;
+} */
 
 /**
  * Blockquotes
@@ -129,7 +130,7 @@ blockquote {
  */
 pre,
 code {
-    font-size: 15px;
+    font-size: 14px;
     border: 1px solid $grey-color-light;
     border-radius: 3px;
     background-color: #eef;
@@ -141,7 +142,7 @@ code {
 
 pre {
     padding: 8px 12px;
-    overflow-x: auto;
+    overflow-x: scroll;
 
     > code {
         border: 0;
@@ -204,3 +205,16 @@ pre {
         }
     }
 }
+
+
+
+a.tosu {
+color: #b00000;
+background: #f5f5f5;
+text-decoration: none;
+ padding: 2px; 
+ font-weight: 600; 
+font-family: 'Capita', Georgia, serif;
+}
+
+
