--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,51 +1,31 @@
-/**
- * Site header
- */
-.site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
 
-    // Positioning context for the mobile navigation icon
-    position: relative;
-}
 
-.site-title {
-    font-size: 26px;
-    font-weight: 300;
-    line-height: 56px;
-    letter-spacing: -1px;
-    margin-bottom: 0;
-    float: left;
-
-    &,
-    &:visited {
-        color: $grey-color-dark;
-    }
-}
-
-.site-nav {
+/* .site-nav {
     float: right;
-    line-height: 56px;
+    line-height: 40px;
+		margin-top: 15px;
 
     .menu-icon {
         display: none;
     }
 
     .page-link {
-        color: $text-color;
+        color: #ffffff;
+    background: #f66733;
         line-height: $base-line-height;
 
-        // Gaps between nav items, but not on the last one
-        &:not(:last-child) {
-            margin-right: 20px;
+        // Gaps between nav items, but not on the first one
+        &:not(:first-child) {
+            margin-left: 20px;
         }
     }
+
+
 
     @include media-query($on-palm) {
         position: absolute;
         top: 9px;
-        right: $spacing-unit / 2;
+        right: 30px;
         background-color: $background-color;
         border: 1px solid $grey-color-light;
         border-radius: 5px;
@@ -83,14 +63,10 @@
         .page-link {
             display: block;
             padding: 5px 10px;
-
-            &:not(:last-child) {
-                margin-right: 0;
-            }
-            margin-left: 20px;
         }
     }
 }
+*/ 
 
 
 
@@ -203,13 +179,15 @@
     margin-bottom: $spacing-unit;
 }
 
-.post-title {
-    font-size: 42px;
+h1 /* .post-title */ {
+/*    font-size: 42px; */
     letter-spacing: -1px;
     line-height: 1;
+		font-family: 'Titillium Web', sans-serif;
+		color: #522d80;
 
     @include media-query($on-laptop) {
-        font-size: 36px;
+/*        font-size: 36px; */
     }
 }
 
@@ -217,26 +195,63 @@
     margin-bottom: $spacing-unit;
 
     h2 {
-        font-size: 32px;
+		font-family: 'Titillium Web', sans-serif;
+	font-weight: 500;
+/*        font-size: 32px; */
 
         @include media-query($on-laptop) {
-            font-size: 28px;
+/*            font-size: 28px; */
         }
     }
 
     h3 {
-        font-size: 26px;
+		font-style: italic;
+/*        font-size: 26px; */
 
         @include media-query($on-laptop) {
-            font-size: 22px;
+/*            font-size: 22px; */
         }
     }
 
     h4 {
-        font-size: 20px;
+/*       font-size: 20px; */
 
         @include media-query($on-laptop) {
-            font-size: 18px;
+/*            font-size: 18px; */
         }
     }
 }
+
+						.footnotes ol li {list-style-type:decimal;}
+						.footnotes ol {font-size:.85em; color:#666666;}	
+	
+html {
+  overflow-y: scroll;
+}
+
+ul.listing {
+	list-style-type: none;
+	margin-left: 0px;
+}
+
+ul.listing li.listing-seperator {
+	padding-top: 15px;
+	font-weight: bold;
+	font-family: 'Titillium Web', sans-serif;
+	font-size: 1.17em;
+}
+
+ul.listing li.listing-item time {
+
+	color: #333;
+	font-weight: 500;
+	text-transform: uppercase;
+	padding-right: 10px;
+}
+
+ul.listing li.listing-item a {
+	color: $clemson-purple;
+	font-weight: 400;
+	font-family: 'Titillium Web', sans-serif;
+}
+
