--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,14 +5,14 @@
 				{% for page in site.pages %} {% if page.title %}
 				<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
 				{% endif %} {% endfor %}
-				<li><a href="{{ "/blog" | prepend: site.baseurl }}">Blog</a></li>
+				<!--li><a href="{{ "/blog" | prepend: site.baseurl }}">Blog</a></li-->
 			</ul>
 			</li>
 			</ul>
 		</nav>
 	</div>
 </aside>
-
+    
 <header>
 	<h1><a href="{{ site.url }}">{{ site.title }}</a></h1>
 </header>
